# realsense

realsense_gazebo_plugin/: CMakeLists.txt  model.sdf  package.xml
realsense_gazebo_plugin/include/realsense_gazebo_plugin/: gazebo_ros_realsense.h  gazebo_ros_realsense.h.save
realsense_gazebo_plugin/models/realsense_d455/: model.config  model.sdf
realsense_gazebo_plugin/src/: RealSensePlugin.cpp  gazebo_ros_realsense.cpp  gazebo_ros_realsense.cpp.save
